# coicop-query

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
scripts/: bake.py
src/coicop_query/: __init__.py  bake_cmd.py  exceptions.py  get_cmd.py  query_cmd.py  utils.py
src/coicop_query/resources/: coicop-2018-structure.csv
tests/: smoke_test.py
